# bean-bot

./: Cargo.toml  Cross.toml
.cargo/: config.toml
migrations/2023-03-10-161637_favorite/: down.sql  up.sql
migrations/2023-03-29-134323_rolemenu/: down.sql  up.sql
src/: cmd.rs  main.rs
src/cmd/: fav_msgs.rs  general.rs  roles.rs
src/cmd/fav_msgs/: model.rs
src/cmds/: general.rs  mod.rs
src/cmds/fav_msgs/: db.rs  mod.rs  model.rs
src/cmds/roles/: db.rs  mod.rs  model.rs
src/db/: mod.rs  schema.rs
