[package]
name = "bean-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
poise = { path = "../poise" } #"0.5.2"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.26.0", features = ["full"] }
