[package]
name = "bean-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
env_logger = "0.10.0"
log = "0.4.20"
poise = { path = "../poise" } # poise/next mashup with serenity/next
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
